cmake_minimum_required(VERSION 3.15)
project(CPPStudy)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CPPStudy 01_helloworld/main.cpp)
#add_executable(CPPStudy 02_input_output/input_output.cpp)
#add_executable(CPPStudy 03_add_number/add_number.cpp)
add_executable(CPPStudy 04_url_parsing/url_parsing.cpp)